restore background .color

--- a/app/assets/stylesheets/lesli/templates/application.css
+++ b/app/assets/stylesheets/lesli/templates/application.css
@@ -29016,6 +29016,7 @@ Building a better future, one line of code at a time.
 
 html,
 body {
+  background-color: var(--lesli-color-background);
   scrollbar-color: var(--lesli-color-primary) transparent;
   scrollbar-width: thin;
   font-weight: normal;
