implement chart.css

--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -34,7 +34,7 @@ Building a better future, one line of code at a time.
 // · 
 @import "lesli-css";
 @import "lesli-css/source/vendor/bulma";
-//@import "charts.css";
+@import "charts.css/dist/charts";
 
 
 
