--- a/app/assets/stylesheets/lesli/templates/public.css
+++ b/app/assets/stylesheets/lesli/templates/public.css
@@ -15673,6 +15673,10 @@ has-background-danger.is-hoverable:active {
   --bulma-shadow: 0 0.5em 1em -0.125em hsla(var(--bulma-shadow-h), var(--bulma-shadow-s), var(--bulma-shadow-l), 0.1), 0 0px 0 1px hsla(var(--bulma-shadow-h), var(--bulma-shadow-s), var(--bulma-shadow-l), 0.02);
 }
 
+.box {
+  --bulma-box-radius: 5px;
+}
+
 /*
 Lesli
 
