--- a/app/assets/stylesheets/lesli/templates/application.css
+++ b/app/assets/stylesheets/lesli/templates/application.css
@@ -30666,7 +30666,7 @@ section.application-lesli-notifications .notification {
 
 Lesli
 
-Copyright (c) 2023, Lesli Technologies, S. A.
+Copyright (c) 2025, Lesli Technologies, S. A.
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -30683,11 +30683,11 @@ along with this program. If not, see http://www.gnu.org/licenses/.
 
 Lesli · Ruby on Rails SaaS Development Framework.
 
-Made with ♥ by https://www.lesli.tech
+Made with ♥ by LesliTech
 Building a better future, one line of code at a time.
 
 @contact  hello@lesli.tech
-@website  https://www.lesli.dev
+@website  https://www.lesli.tech
 @license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
@@ -30723,6 +30723,11 @@ nav.lesli-application-navigation li a {
   align-items: center;
   border-bottom: 2px solid transparent;
   color: #1a1a1a;
+  transition: all linear 0.2s;
+}
+nav.lesli-application-navigation li a:hover {
+  color: #273445;
+  text-shadow: 0 2px 6px rgba(39, 52, 69, 0.25);
 }
 nav.lesli-application-navigation li a.navigation-link-active {
   border-bottom-color: #0d52bf;
