add date format builder

--- a/app/views/lesli/shared/dashboards/_show.html.erb
+++ b/app/views/lesli/shared/dashboards/_show.html.erb
@@ -49,7 +49,7 @@ end
     <section class="lesli-element-header is-flex mt-6">
         <div class="lesli-element-header-title">
             <h1 class="subtitle is-size-3 mb-0"><%= welcome_text %>, <%= current_user.full_name %>.</h1>
-            <p class=""><%= Date2.new.date_words %>.</p>
+            <p class=""><%= Date2.new.date_words_day %>.</p>
         </div>
     </section>
 
