--- a/lib/scss/templates/application.scss
+++ b/lib/scss/templates/application.scss
@@ -49,6 +49,8 @@ Building a better future, one line of code at a time.
 @import "LesliView/lib/lesli_view/elements/table";
 @import "LesliView/lib/lesli_view/forms/form";
 
+@import "LesliView/lib/lesli_view/components/timeline";
+
 
 // · Font families and icons
 @import "../fonts/remixicons";
