--- a/app/views/lesli/partials/_application-data.html.erb
+++ b/app/views/lesli/partials/_application-data.html.erb
@@ -32,6 +32,7 @@ Building a better future, one line of code at a time.
 
 <%
 
+@lesli[:tickets] = 0
 @lesli[:notifications] = Lesli::Courier.new(:lesli_bell, 0).from(:notification_service, current_user).call(:count)
 
 %>
