--- a/app/views/lesli/apps/show.html.erb
+++ b/app/views/lesli/apps/show.html.erb
@@ -6,6 +6,9 @@
                 <%# 01. Administration %>
                 <%= navigation_engine_admin %>
 
+                <%# 02. Sales & Marketing %>
+                <%= navigation_engine_mailer %>
+
                 <%# 03. Productivity & Teamwork%>
                 <%= navigation_engine_calendar %>
                 <%= navigation_engine_bell %>
